[gd_scene load_steps=24 format=2]

[ext_resource path="res://Fuentes/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Menu_Aseo_Hogar/logo_loza.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu_Aseo_Hogar/logo_tools.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu_Aseo_Hogar/logo_ropa.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu_Aseo_Hogar/logo_superficies.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu_Aseo_Hogar/logo_otros.png" type="Texture" id=6]
[ext_resource path="res://Scripts/AseoHogar.gd" type="Script" id=7]
[ext_resource path="res://Sprites/logo_back.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Menu_Comida/Menu_Carne/fotos/res_molida.jpg" type="Texture" id=12]
[ext_resource path="res://Sprites/logo_fw.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.396078, 0.396078, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.596078, 0.631373, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
draw_center = false
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.396078, 0.396078, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="AseoHogar" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.596078, 0.584314, 0.941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 86.5
margin_top = 120.0
margin_right = 489.5
margin_bottom = 160.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 406.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Aseo
hogar"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 118.0
margin_right = 406.0
margin_bottom = 148.0
custom_constants/separation = 30

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 163.0
margin_right = 406.0
margin_bottom = 713.0
rect_min_size = Vector2( 0, 550 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 394.0
margin_bottom = 976.0

[node name="HBoxTools" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 394.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteTools" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxTools"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxTools"]
margin_left = 196.0
margin_right = 394.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxTools/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 198.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxTools/VBoxContainer"]
margin_top = 44.0
margin_right = 198.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Herramienta"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxTools/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 198.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonTools" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxTools/VBoxContainer"]
margin_left = 69.0
margin_top = 135.0
margin_right = 129.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxRopa" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 394.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteRopa" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRopa"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRopa"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRopa/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRopa/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Ropa"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRopa/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonRopa" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRopa/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxSuperficies" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 394.0
margin_bottom = 584.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteSuperficies" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxSuperficies"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxSuperficies"]
margin_left = 196.0
margin_right = 394.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxSuperficies/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 198.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxSuperficies/VBoxContainer"]
margin_top = 44.0
margin_right = 198.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Superficies"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxSuperficies/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 198.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonSuperficies" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxSuperficies/VBoxContainer"]
margin_left = 69.0
margin_top = 135.0
margin_right = 129.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxLoza" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 588.0
margin_right = 394.0
margin_bottom = 780.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteLoza" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxLoza"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxLoza"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxLoza/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxLoza/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Loza"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxLoza/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonLoza" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxLoza/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="HBoxOtros" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 784.0
margin_right = 394.0
margin_bottom = 976.0
rect_min_size = Vector2( 0, 192 )

[node name="SpriteOtros" type="TextureRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxOtros"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture = ExtResource( 6 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxOtros"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxOtros/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 192.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxOtros/VBoxContainer"]
margin_top = 44.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "Otros"
align = 1
clip_text = true
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxOtros/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 66.0
margin_right = 192.0
margin_bottom = 131.0
custom_constants/separation = 65

[node name="BotonOtros" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxOtros/VBoxContainer"]
margin_left = 66.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 157.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "VER"

[node name="BotonVolver" type="Button" parent="VBoxContainer"]
margin_top = 728.0
margin_right = 406.0
margin_bottom = 792.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "VOLVER"
icon = ExtResource( 10 )

[node name="Muestra" type="WindowDialog" parent="."]
margin_left = 43.0
margin_top = 120.0
margin_right = 543.0
margin_bottom = 820.0
rect_min_size = Vector2( 500, 800 )
custom_styles/panel = SubResource( 8 )
custom_fonts/title_font = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Muestra"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
margin_bottom = 6.10352e-05
rect_min_size = Vector2( 500, 800 )
rect_clip_content = true
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Muestra/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 500.0
margin_bottom = 30.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="Muestra/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 34.0
margin_right = 500.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 10 )
text = "VARIANTE"
align = 1
uppercase = true

[node name="HSeparator2" type="HSeparator" parent="Muestra/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 58.0
margin_right = 500.0
margin_bottom = 88.0
custom_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="Muestra/VBoxContainer"]
margin_top = 92.0
margin_right = 500.0
margin_bottom = 592.0
rect_min_size = Vector2( 500, 500 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Muestra/VBoxContainer"]
margin_top = 596.0
margin_right = 500.0
margin_bottom = 724.0

[node name="VSeparator" type="VSeparator" parent="Muestra/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 128.0
custom_constants/separation = 30

[node name="BotonAnterior" type="Button" parent="Muestra/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 162.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
disabled = true
icon = ExtResource( 10 )
expand_icon = true

[node name="VSeparator2" type="VSeparator" parent="Muestra/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 166.0
margin_right = 341.0
margin_bottom = 128.0
custom_constants/separation = 175

[node name="BotonSiguiente" type="Button" parent="Muestra/VBoxContainer/HBoxContainer"]
margin_left = 345.0
margin_right = 473.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
disabled = true
icon = ExtResource( 13 )
expand_icon = true
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxTools/VBoxContainer/BotonTools" to="." method="_on_BotonTools_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxRopa/VBoxContainer/BotonRopa" to="." method="_on_BotonRopa_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxSuperficies/VBoxContainer/BotonSuperficies" to="." method="_on_BotonSuperficies_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxLoza/VBoxContainer/BotonLoza" to="." method="_on_BotonLoza_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxOtros/VBoxContainer/BotonOtros" to="." method="_on_BotonOtros_button_up"]
[connection signal="button_up" from="VBoxContainer/BotonVolver" to="." method="_on_BotonVolver_button_up"]
[connection signal="button_up" from="Muestra/VBoxContainer/HBoxContainer/BotonAnterior" to="." method="_on_BotonAnterior_button_up"]
[connection signal="button_up" from="Muestra/VBoxContainer/HBoxContainer/BotonSiguiente" to="." method="_on_BotonSiguiente_button_up"]
